@@ -1,12 +1,11 @@
 package br.arthconf.fortivus.controller;
 
-import br.arthconf.fortivus.domain.Escala;
-import br.arthconf.fortivus.domain.model.Usuario;
-import br.arthconf.fortivus.domain.CheckoutEquipamento;
+import br.arthconf.fortivus.application.port.in.ListarCheckoutsPorEscalaUseCase;
+import br.arthconf.fortivus.application.port.in.RegistrarDevolucaoUseCase;
+import br.arthconf.fortivus.application.port.in.RegistrarEmprestimoUseCase;
+import br.arthconf.fortivus.application.port.out.UsuarioPort;
+import br.arthconf.fortivus.domain.model.CheckoutEquipamento;
 import br.arthconf.fortivus.dto.CheckoutEquipamentoDTO;
-import br.arthconf.fortivus.service.CheckoutService;
-import br.arthconf.fortivus.service.EscalaService;
-import br.arthconf.fortivus.service.UsuarioService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -14,38 +13,35 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/ativos/checkout")
 @RequiredArgsConstructor
 public class CheckoutController {
 
-    private final CheckoutService checkoutService;
-    private final EscalaService escalaService;
-    private final UsuarioService usuarioService;
+    private final ListarCheckoutsPorEscalaUseCase listarCheckoutsUseCase;
+    private final RegistrarEmprestimoUseCase registrarEmprestimoUseCase;
+    private final RegistrarDevolucaoUseCase registrarDevolucaoUseCase;
+    private final UsuarioPort usuarioPort;
 
     @GetMapping("/{escalaId}")
     @PreAuthorize("hasAnyRole('ADMIN', 'CENTRO_COMANDO_CENTRAL', 'CENTRO_COMANDO', 'COMBATENTE')")
     public ResponseEntity<List<CheckoutEquipamentoDTO>> listarPorEscala(@PathVariable UUID escalaId) {
-        List<CheckoutEquipamentoDTO> checkouts = checkoutService.listarPorEscala(escalaId).stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(checkouts);
+        return ResponseEntity.ok(
+                listarCheckoutsUseCase.executar(escalaId).stream().map(this::toDTO).toList()
+        );
     }
 
     @PostMapping("/{escalaId}/emprestar")
     @PreAuthorize("hasAnyRole('ADMIN', 'CENTRO_COMANDO_CENTRAL', 'CENTRO_COMANDO')")
-    public ResponseEntity<Void> emprestar(@PathVariable UUID escalaId, 
+    public ResponseEntity<Void> emprestar(@PathVariable UUID escalaId,
                                           @RequestParam UUID equipamentoId,
                                           @RequestParam String emailResponsavel) {
-        Escala escala = escalaService.buscarPorId(escalaId);
-        Usuario responsavel = usuarioService.listarTodos().stream()
-                .filter(u -> u.getEmail().equalsIgnoreCase(emailResponsavel))
-                .findFirst()
-                .orElseThrow(() -> new RuntimeException("Responsável não encontrado"));
+        UUID responsavelId = usuarioPort.findByEmailIgnoreCase(emailResponsavel)
+                .map(u -> u.getId())
+                .orElseThrow(() -> new RuntimeException("Responsável não encontrado: " + emailResponsavel));
 
-        checkoutService.registrarEmprestimo(escala, equipamentoId, responsavel);
+        registrarEmprestimoUseCase.executar(escalaId, equipamentoId, responsavelId);
         return ResponseEntity.ok().build();
     }
 
@@ -54,24 +50,23 @@ public class CheckoutController {
     public ResponseEntity<Void> devolver(@PathVariable UUID escalaId,
                                          @PathVariable UUID checkoutId,
                                          @RequestParam String emailResponsavel) {
-        Usuario responsavel = usuarioService.listarTodos().stream()
-                .filter(u -> u.getEmail().equalsIgnoreCase(emailResponsavel))
-                .findFirst()
-                .orElseThrow(() -> new RuntimeException("Responsável não encontrado"));
+        UUID responsavelId = usuarioPort.findByEmailIgnoreCase(emailResponsavel)
+                .map(u -> u.getId())
+                .orElseThrow(() -> new RuntimeException("Responsável não encontrado: " + emailResponsavel));
 
-        checkoutService.registrarDevolucao(checkoutId, responsavel);
+        registrarDevolucaoUseCase.executar(checkoutId, responsavelId);
         return ResponseEntity.ok().build();
     }
 
     private CheckoutEquipamentoDTO toDTO(CheckoutEquipamento checkout) {
         return new CheckoutEquipamentoDTO(
                 checkout.getId(),
-                checkout.getEscala() != null ? checkout.getEscala().getId() : null,
-                checkout.getEquipamento() != null ? checkout.getEquipamento().getId() : null,
-                checkout.getResponsavelEntrega() != null ? checkout.getResponsavelEntrega().getId() : null,
+                checkout.getEscalaId(),
+                checkout.getEquipamentoId(),
+                checkout.getResponsavelEntregaId(),
                 checkout.getDataEmprestimo(),
                 checkout.getDataDevolucao(),
-                checkout.getResponsavelRecebimento() != null ? checkout.getResponsavelRecebimento().getId() : null
+                checkout.getResponsavelRecebimentoId()
         );
     }
 }
